--- a/src/main/views/layout.twig
+++ b/src/main/views/layout.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %} uoMusic {% endblock %}</title>
+    <title>{% block title %} Sdistagram {% endblock %}</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet"
@@ -23,9 +23,9 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li id="myshop" class="active"><a href="/shop">Tienda</a></li>
-                <li id="mypublication"><a href="/publications">Publicaciones</a></li>
-                <li id="mybuy"><a href="/purchases">Compras</a></li>
+                <li id="myshop" class="active"><a href="/inicio">Inicio</a></li>
+                <li id="mypublication"><a href="/posts">Posts</a></li>
+                <li id="mybuy"><a href="/amigos">Usuarios</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/users/signup"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
