--- a/src/main/views/users/list.twig
+++ b/src/main/views/users/list.twig
@@ -4,29 +4,52 @@
     <h2>Listado de Usuarios</h2>
     <div class="row">
         <!-- http://librosweb.es/libro/bootstrap_3/capitulo_2/tipos_de_rejillas.html -->
-        <!-- Inicio del Bloque autores -->
-        {% for user in users %}
-            <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
-                <div style="width:200px">
-                    <!-- http://www.socicon.com/generator.php -->
-                    <div>{{ user.nombre }} </div>
-                    <div class="small">{{ user.apellidos }} </div>
-                    <div class="small">{{ user.email }}</div>
-                </div>
-            </div>
-        {% endfor %}
-        <!-- Fin del Bloque autor -->
+        <div class="table-responsive">
+            <table class="table table-hover" id="tableShowUsers">
+                <thead>
+                <tr>
+                    <th scope="col">Email</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Apellidos</th>
+                    <!--  <th scope="col"></th>-->
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in users %}
+                <tr>
+                    <td scope="row">{{ user.email }}</td>
+                    <td scope="row">{{ user.nombre }}</td>
+                    <td scope="row">{{ user.apellidos }}</td>
+
+                    <!--  <td scope="row" th:if="${!user.getFriendRequestReceived().contains(activeUser)&&!user.getFriends().contains(activeUser)}">
+                       <form th:action="${'/user/sendFriendRequest/' + user.id}" method="post">
+                           <input type="submit" class="btn btn-primary btnSendFR" value="Send Friend Request" >
+                       </form>
+                   </td> -->
+               </tr>
+               {% endfor %}
+               </tbody>
+           </table>
+
+       </div>
+
+
+
+
+       <!-- Fin del Bloque autor -->
     </div>
+    <!-- Paginación mostrar la actual y 2 anteriores y dos siguientes -->
     <!-- Paginación mostrar la actual y 2 anteriores y dos siguientes -->
     <div class="row text-center">
         <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Anterior</a></li>
-            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
-            <li class="page-item"><a class="page-link" href="#">5</a></li>
-            <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
+            {% for page in pages %}
+                <li class="page-item" id="pi-{{ page }}">
+                    <a class="page-link" href="/users/list/?page={{ page }}">{{ page }}</a>
+                </li>
+            {% endfor %}
+            <script>
+                $("#pi-" + "{{ currentPage }}").addClass("active");
+            </script>
         </ul>
     </div>
 {% endblock %}
