--- a/src/main/views/users/list.twig
+++ b/src/main/views/users/list.twig
@@ -1,6 +1,22 @@
 {% extends "layout.twig" %}
 {% block title %} Tienda – uoMusic {% endblock %}
 {% block main_container %}
+    <!-- Búsqueda -->
+    <div class="row">
+        <div id="custom-search-input ">
+            <form method="get" action="/users/list">
+                <div class="input-group col-xs-8 col-sm-6 col-md-4 col-lg-5 pull-right">
+                    <input id="search" type="text" class="search-query form-control"
+                           placeholder="Nombre de usuario" name="search"/>
+                    <span class="input-group-btn">
+                <button class="btn" type="submit">
+                <span class="glyphicon glyphicon-search"></span>
+                </button>
+                </span>
+                </div>
+            </form>
+        </div>
+    </div>
     <h2>Listado de Usuarios</h2>
     <div class="row">
         <!-- http://librosweb.es/libro/bootstrap_3/capitulo_2/tipos_de_rejillas.html -->
