--- a/src/main/views/index.twig
+++ b/src/main/views/index.twig
@@ -1,6 +1,5 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-  <h1>{{title}}</h1>
-  <p>Welcome to {{title}}</p>
+  <h2 class="text-center">Bienvenido a sdigram</h1>
 {% endblock %}
