--- a/src/main/views/layout.twig
+++ b/src/main/views/layout.twig
@@ -26,6 +26,7 @@
                 <li id="myshop" class="active"><a href="/inicio">Inicio</a></li>
                 <li id="mypublication"><a href="/posts">Posts</a></li>
                 <li id="mybuy"><a href="/users/list">Usuarios</a></li>
+                <li id="friendRequests"><a href="/user/friendRequests">Peticiones de amistad</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/users/signup"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
