--- a/src/main/views/friends/friendRequestList.twig
+++ b/src/main/views/friends/friendRequestList.twig
@@ -1,5 +1,5 @@
 {% extends "layout.twig" %}
-{% block title %} SDINSTAGRAM {% endblock %}
+{% block title %} SDIGRAM - Peticiones de amistad {% endblock %}
 {% block main_container %}
     <h2>Listado de invitaciones de amistad</h2>
     <div class="row">
@@ -29,12 +29,7 @@
 
         </div>
 
-
-
-
-        <!-- Fin del Bloque autor -->
     </div>
-    <!-- Paginación mostrar la actual y 2 anteriores y dos siguientes -->
     <!-- Paginación mostrar la actual y 2 anteriores y dos siguientes -->
     <div class="row text-center">
         <ul class="pagination">
