--- a/src/main/views/friends/list.twig
+++ b/src/main/views/friends/list.twig
@@ -1,5 +1,5 @@
 {% extends "layout.twig" %}
-{% block title %} Tienda – uoMusic {% endblock %}
+{% block title %} SDIGRAM - Mis amigos {% endblock %}
 {% block main_container %}
     <h2>Listado de Amigos</h2>
     <div class="row">
