--- a/src/main/views/login.twig
+++ b/src/main/views/login.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %} Identificar usuario {% endblock %}
+{% block title %}SDIGRAM - Identificar usuario {% endblock %}
 
 {% block main_container %}
   <h2>Identificación de usuario</h2>
