--- a/src/main/views/posts/edit.twig
+++ b/src/main/views/posts/edit.twig
@@ -1,5 +1,5 @@
 {% extends "layout.twig" %}
-{% block title %} Agregar canción {% endblock %}
+{% block title %} SDIGRAM {% endblock %}
 {% block main_container %}
     <h2>Modificar canción</h2>
     <form class="form-horizontal" method="post" action="/songs/edit/{{ song._id }}" encType="multipart/form-data">
