--- a/src/main/views/publications.twig
+++ b/src/main/views/publications.twig
@@ -1,5 +1,7 @@
-{% extends "layout.twig" %} {% block title %} Mis publicaciones {% endblock %} {% block main_container %} <h2>Mis
-    publicaciones</h2> <!-- Agregar Canción -->
+{% extends "layout.twig" %}
+{% block title %} SDIGRAM - Mis publicaciones {% endblock %}
+{% block main_container %}
+    <h2>Mis publicaciones</h2>
     <div class="row text-right">
         <a href="/songs/add" class="btn btn-info" role="button">Agregar canción</a>
     </div>
