--- a/src/main/views/signup.twig
+++ b/src/main/views/signup.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %} Registrar usuario {% endblock %}
+{% block title %}SDIGRAM - Registrar usuario {% endblock %}
 
 {% block main_container %}
   <h2>Registrar usuario</h2>
