--- a/src/main/views/layout.twig
+++ b/src/main/views/layout.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %} Sdistagram {% endblock %}</title>
+    <title>{% block title %} SDIGRAM {% endblock %}</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet"
@@ -24,7 +24,6 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li id="myshop" class="active"><a href="/inicio">Inicio</a></li>
-                <li id="mypublication"><a href="/posts">Posts</a></li>
                 <li id="mybuy"><a href="/users/list">Usuarios</a></li>
                 <li id="friendRequests"><a href="/user/friendRequests">Peticiones de amistad</a></li>
                 <li id="friendRequests"><a href="/user/friends">Amigos</a></li>
