--- a/src/main/views/posts/add.twig
+++ b/src/main/views/posts/add.twig
@@ -1,5 +1,5 @@
 {% extends "layout.twig" %}
-{% block title %} Agregar post {% endblock %}
+{% block title %} SDIGRAM {% endblock %}
 {% block main_container %}
     <h2>Agregar post</h2>
     <form class="form-horizontal" method="post" action="/posts/add" enctype="multipart/form-data">
