--- a/src/main/views/users/list.twig
+++ b/src/main/views/users/list.twig
@@ -1,5 +1,5 @@
 {% extends "layout.twig" %}
-{% block title %} Tienda – uoMusic {% endblock %}
+{% block title %} SDIGRAM {% endblock %}
 {% block main_container %}
     <!-- Búsqueda -->
     <div class="row">
