--- a/src/main/views/friends/list.twig
+++ b/src/main/views/friends/list.twig
@@ -1,9 +1,8 @@
 {% extends "layout.twig" %}
-{% block title %} Tienda – uoMusic {% endblock %}
+{% block title %} Sditagram {% endblock %}
 {% block main_container %}
     <h2>Listado de Amigos</h2>
     <div class="row">
-        <!-- http://librosweb.es/libro/bootstrap_3/capitulo_2/tipos_de_rejillas.html -->
         <div class="table-responsive">
             <table class="table table-hover" id="tableShowUsers">
                 <thead>
