--- a/src/main/views/layout.twig
+++ b/src/main/views/layout.twig
@@ -30,8 +30,12 @@
                 <li id="friendRequests"><a href="/user/friends">Amigos</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/users/signup"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
-                <li><a href="/users/login"><span class="glyphicon glyphicon-log-in"></span> Identifícate</a></li>
+                <li><a href="/users/signup"><span class="glyphicon glyphicon-user"></span>Registrate</a></li>
+                {% if {{ app.user }} %}
+                    <li><a href="/users/login"><span class="glyphicon glyphicon-log-in"></span>Identifícate</a></li>
+                {% else %}
+                    <li><a href="/users/logout"><span class="glyphicon glyphicon-log-out"></span>Cerrar sesión</a></li>
+               {% endif %}
             </ul>
         </div>
     </div>
