Test 21 y 15 funcionando y arreglo paginación

--- a/src/main/views/layout.twig
+++ b/src/main/views/layout.twig
@@ -23,7 +23,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li id="inicio" class="active"><a href="/inicio">Inicio</a></li>
+                <li id="inicio" class="active"><a href="/users/home">Inicio</a></li>
                 <li id="myPosts"><a href="/posts/myPosts">Posts</a></li>
                 <li id="addPosts"><a href="/posts/add">Añadir Post</a></li>
                 <li id="users"><a href="/users/list">Usuarios</a></li>
