--- a/src/main/views/users/list.twig
+++ b/src/main/views/users/list.twig
@@ -6,7 +6,7 @@
         <div id="custom-search-input ">
             <form method="get" action="/users/list">
                 <div class="input-group col-xs-8 col-sm-6 col-md-4 col-lg-5 pull-right">
-                    <input id="search" type="text" class="search-query form-control"
+                    <input id="searchText" type="text" class="search-query form-control"
                            placeholder="Nombre de usuario" name="search"/>
                     <span class="input-group-btn">
                 <button class="btn" type="submit">
