--- a/src/main/views/friends/friendRequestList.twig
+++ b/src/main/views/friends/friendRequestList.twig
@@ -1,10 +1,10 @@
 {% extends "layout.twig" %}
 {% block title %} SDIGRAM - Peticiones de amistad {% endblock %}
 {% block main_container %}
-    <h2>Listado de invitaciones de amistad</h2>
+    <h2 id="idTituloPeticionesAmistadListaUser">Listado de invitaciones de amistad</h2>
     <div class="row">
         <div class="table-responsive">
-            <table class="table table-hover" id="tableShowUsers">
+            <table class="table table-hover">
                 <thead>
                 <tr>
                     <th scope="col">Nombre</th>
@@ -14,7 +14,7 @@
                 </thead>
                 <tbody>
                 {% for request in friendRequests %}
-                    <tr>
+                    <tr >
                         <td scope="row">{{ request.nombre }}</td>
                         <td scope="row">{{ request.apellidos }}</td>
                         <td scope="row">
