--- a/src/main/views/friends/friendRequestList.twig
+++ b/src/main/views/friends/friendRequestList.twig
@@ -4,7 +4,7 @@
     <h2 id="idTituloPeticionesAmistadListaUser">Listado de invitaciones de amistad</h2>
     <div class="row">
         <div class="table-responsive">
-            <table class="table table-hover">
+            <table class="table table-hover" id="idTablaListaPeticionesAmistad">
                 <thead>
                 <tr>
                     <th scope="col">Nombre</th>
@@ -13,6 +13,7 @@
                 </tr>
                 </thead>
                 <tbody>
+
                 {% for request in friendRequests %}
                     <tr >
                         <td scope="row">{{ request.nombre }}</td>
