--- a/src/main/views/signup.twig
+++ b/src/main/views/signup.twig
@@ -6,15 +6,15 @@
   <h2>Registrar usuario</h2>
   <form class="form-horizontal" method="post" action="/users/signup" >
     <div class="form-group">
-      <label class="control-label col-sm-2" for="name">Nombre:</label>
+      <label class="control-label col-sm-2" for="nombre">Nombre:</label>
       <div class="col-sm-10">
-        <input id="name" type="text" class="form-control" name="name"
+        <input id="nombre" type="text" class="form-control" name="nombre"
                placeholder="María" required />
       </div>
     </div><div class="form-group">
-      <label class="control-label col-sm-2" for="surname">Apellidos:</label>
+      <label class="control-label col-sm-2" for="apellidos">Apellidos:</label>
       <div class="col-sm-10">
-        <input id="surname" type="text" class="form-control" name="surname"
+        <input id="apellidos" type="text" class="form-control" name="apellidos"
                placeholder="Martínez Prieto" required />
       </div>
     </div>
