--- a/src/main/views/admin/list.twig
+++ b/src/main/views/admin/list.twig
@@ -2,7 +2,7 @@
 {% block title %} Usuarios {% endblock %}
 
 {% block main_container %}
-<h2>Usuarios</h2>
+<h2 id="idTitleAdminListUser">Usuarios</h2>
 
 <div class="table-responsive">
     <form action="/admin/users/delete" method="get">
