--- a/src/main/views/login.twig
+++ b/src/main/views/login.twig
@@ -3,7 +3,7 @@
 {% block title %} Identificar usuario {% endblock %}
 
 {% block main_container %}
-  <h2>Identificación de usuario</h2>
+  <h2>Identificacion de usuario</h2>
   <form class="form-horizontal" method="post" action="/users/login" >
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
