--- a/src/main/views/friends/list.twig
+++ b/src/main/views/friends/list.twig
@@ -20,7 +20,7 @@
                         <tr>
                             <td scope="row">{{ friend.email }}</td>
 
-                            <td scope="row"> <a href="/posts/{{ friend.email }}">{{ friend.nombre }}  </a></td>
+                            <td scope="row"> <a href="/posts/{{ friend.email }}" id="linkNombre">{{ friend.nombre }}  </a></td>
 
                             <td scope="row">{{ friend.apellidos }}</td>
                         </tr>
