--- a/src/main/views/layout.twig
+++ b/src/main/views/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <title>{% block title %} SDIGRAM {% endblock %}</title>
     <meta charset="utf-8"/>
@@ -18,7 +18,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button
+            </button>
             <img src="/images/logo.png" alt="logo"/>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -31,31 +31,31 @@
                 <li id="friends"><a href="/user/friends">Amigos</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/users/signup"><span class="glyphicon glyphicon-user"></span>Registrate</a></li>
-                {% if {{ app.user }} %}
+                <li><a href="/users/signup"><span class="glyphicon glyphicon-user"></span>Regístrate</a></li>
+                {% if user == null %}
                     <li><a href="/users/login"><span class="glyphicon glyphicon-log-in"></span>Identifícate</a></li>
                 {% else %}
                     <li><a href="/users/logout"><span class="glyphicon glyphicon-log-out"></span>Cerrar sesión</a></li>
-               {% endif %}
+                {% endif %}
             </ul>
         </div>
     </div>
 </nav>
 {% block body %}
-        <div class="container">
-            <script> let params = new URLSearchParams(location.search);
-                let message = params.get("message");
-                let messageType = params.get("messageType");
-                if (message != null && message != "") {
-                    if (messageType == "") {
-                        messageType = 'alert-info';
-                    }
-                    $(".container")
-                        .append("<div class='alert " + messageType + "'>" + message + " </div>");
-                } </script>
-            <!-- Contenido --> {% block main_container %} <!-- Posible contenido por defecto -->
-            {% endblock %}
-        </div>
+    <div class="container">
+        <script> let params = new URLSearchParams(location.search);
+            let message = params.get("message");
+            let messageType = params.get("messageType");
+            if (message != null && message != "") {
+                if (messageType == "") {
+                    messageType = 'alert-info';
+                }
+                $(".container")
+                    .append("<div class='alert " + messageType + "'>" + message + " </div>");
+            } </script>
+        <!-- Contenido --> {% block main_container %} <!-- Posible contenido por defecto -->
+        {% endblock %}
+    </div>
 {% endblock %}
 </body>
 </html>
